# Project-Manager

./: .gitignore  README.md  pm.config.json  pyproject.toml
projectmanager/: arg_parse.py  config.py  main.py
projectmanager/core/: generate.py  scan.py  specification.py  template.py
projectmanager/feature/: add_item.py  generate.py  init.py  remove.py  scan.py  set_options.py  status.py  view.py
projectmanager/util/: io.py  paths.py  style.py
projectmanager/validation/: specification.py  template.py
templates/: pytemplate.json
tests/core/: test_scan.py  test_specification.py
tests/feature/: test_add_item.py  test_generate.py  test_init.py  test_remove.py  test_scan.py  test_set_options.py  test_status.py  test_view.py
tests/util/: test_paths.py
tests/validation/: test_specification.py  test_template.py
