[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_manager"
version = "0.1.0"
description = "A tool to manage project information and track progress."
authors = [{ name = "Samuel John", email = "samuel.john.codes@gmail.com" }]
license = { text = "MIT" }


[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["project_manager"]

